--- a/D0wnloadTube/D0wnloadTube.csproj
+++ b/D0wnloadTube/D0wnloadTube.csproj
@@ -8,6 +8,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <PackageProjectUrl>https://github.com/Ss0urce/D0wnloadTube</PackageProjectUrl>
+    <BaseOutputPath>$(SolutionDir)build\</BaseOutputPath>
+    <BaseIntermediateOutputPath>$(SolutionDir)build\intermediates\</BaseIntermediateOutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <Optimize>False</Optimize>
   </PropertyGroup>
 
   <ItemGroup>
